--- a/public/index/styles.css
+++ b/public/index/styles.css
@@ -22,6 +22,13 @@ header{
     font-size: 2rem;
     padding: 10px;
     margin-bottom: 10px;
+    position: relative;
+}
+
+#username01{
+    top:10px;
+    right: 10px;
+    position: absolute;
 }
 
 .main-body{
@@ -204,7 +211,7 @@ header{
 #box-2{
     background-color:whitesmoke;
     grid-column: 4/5;
-    grid-row: 1/8;
+    grid-row: 1/12;
     padding: 20px;
 }
 
